Correcting image alignment

--- a/css/components/card-item.css
+++ b/css/components/card-item.css
@@ -1,6 +1,8 @@
 @import "../colors.css";
 
 .card-item { 
+    display: flex;
+    align-items: center;
     width: 280px;
     height: 280px;
     background-color: var(--color-monster-second);
@@ -20,5 +22,4 @@
     margin-left: auto;
     margin-right: auto;
     width: 80%;
-    margin-top: 25px
 }
